--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,17 @@ a {
   color: var(--main-text-color)
 }
 
+ul{
+  margin-top: 0;
+  margin-left: 0;
+  margin-bottom: 0;
+}
 
+h1, h2, h3, p{
+  margin-top: 0;
+  margin-left: 0;
+  margin-bottom: 0;
+}
 
 li{
   list-style-type: none;
@@ -27,7 +37,29 @@ li{
   text-decoration-color: #2196F3; 
 }
 
+.container{
+  width: 1170px;
+  margin: 0 auto;
+  padding: 215px auto;
+}
+
 /* HEADER */
+
+header{
+   width: 1600px;
+   height: 80px;
+   background: #FFFFFF;
+}
+
+header> .container{
+ background: #FFFFFF;
+ display: flex;
+ align-items: center;
+}
+
+.logo{
+  margin-right: 93px;
+}
 
 .page{
   color:#212121;
@@ -40,8 +72,12 @@ li{
   font-family: Raleway;
   font-weight: bold;
   font-size: 26px;
-  line-height: 31px;
+  line-height: 1.19;
   letter-spacing: 0.03em;
+}
+
+.header-list>.header-item:not(:last-child){
+  margin-right: 40px;
 }
 
 .header-item a:hover{
@@ -53,35 +89,42 @@ li{
   font-family: Raleway;
   font-weight: bold;
   font-size: 26px;
-  line-height: 31px;
+  line-height: 1.19;
   letter-spacing: 0.03em;
 }
 
-
-
-.header-item{
+.header-list{
+  display:flex;
   font-family: Roboto;
   font-weight: 500;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--main-text-color)
 }
 
+
+.header-item{
+ padding-right: 32px 0;
+ display: block;
+} 
+
 .email-header{
+  display:block;
   font-family: Roboto;
   font-weight: 500;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.02em;
   color: #757575;  
 }
 
 .phone-number-header{
+    display:block;
     font-family: Roboto;
     font-weight: 500;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
     letter-spacing: 0.02em;
     color: #757575;
 }
@@ -94,12 +137,7 @@ li{
   color:#2196F3; 
 }
 
-header{
-   /* position: absolute;
-    width: 1600px;
-    height: 80px; */
-    background: #FFFFFF;
-}
+
 
 /* H1 SECTION */
 
@@ -107,7 +145,7 @@ header{
   font-family: Roboto;
   font-weight: 900;
   font-size: 44px;
-  line-height: 60px;
+  line-height: 1,36;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
@@ -147,7 +185,7 @@ header{
   font-family: Roboto;
   font-weight: bold;
   font-size: 16px;
-  line-height: 30px;
+  line-height: 1,87;
   display: flex;
   align-items: center;
   text-align: center;
@@ -157,6 +195,13 @@ header{
 
 
 /* Features section */
+
+.features{
+  display: flex;
+  font-family: Roboto;
+  font-size: 14px;
+  line-height: 24px;
+}
 
 .features-title{
   /*position: absolute;
@@ -168,17 +213,14 @@ header{
   font-family: Roboto;
   font-weight: bold;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--main-text-color);
 }
 
+
 .text{
-  font-family: Roboto;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
   color: #757575;
 }
 
@@ -189,7 +231,7 @@ header{
   font-family: Roboto;
   font-weight: bold;
   font-size: 36px;
-  line-height: 42px;
+  line-height: 1.16; /*42px*/
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
@@ -211,7 +253,7 @@ header{
   font-family: Roboto;
   font-weight: 500;
   font-size: 16px;
-  line-height: 19px;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
@@ -234,7 +276,7 @@ header{
   font-family: Raleway;
   font-weight: bold;
   font-size: 26px;
-  line-height: 31px;
+  line-height: 1.19;
   letter-spacing: 0.03em;
 }
 
@@ -243,7 +285,7 @@ header{
   font-family: Raleway;
   font-weight: bold;
   font-size: 26px;
-  line-height: 31px;
+  line-height: 1.19;
   letter-spacing: 0.03em;
 }
 
@@ -258,7 +300,7 @@ header{
 .phone-number-footer{
   font-family: Roboto;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6) 
 }
@@ -267,7 +309,7 @@ header{
   font-family: Roboto;
   font-style: normal;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.71;
   color: #FFFFFF;
 }
 
@@ -282,7 +324,7 @@ header{
   font-family: Roboto;
   font-weight: 500;
   font-size: 16px;
-  line-height: 26px;
+  line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em
 }
@@ -310,11 +352,11 @@ header{
 
 .project-items-text{
   font-size: 18px;
-  line-height: 36px;
+  line-height: 2;
   color: #757575;
 }
 
 .project-items-name{
   font-size: 16px;
-  line-height: 30px;
+  line-height: 1.87;
 }
